# uclales-utils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  setup.cfg
.github/workflows/: ci-pre-commit.yml  ci-pypi-deploy.yml  python-app.yml
scripts/: gen_test_data.sh  uclales_cloudblock_to_vdf
tests/: conftest.py  test_aggregation.py  test_plots.py  test_utils.py
uclales/: __init__.py  check_cross_sections.py  generate_derived_fields.py  loader.py
uclales/output/: __init__.py  aggregation.py  common.py  extraction.py
uclales/plots/: timeseries_statistics.py
