[metadata]
name = uclales-utils
version = 0.1.0
author = Leif Denby
author_email = leif@denby.eu
description = UCLALES utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/uclales-utils

[options]
packages=find:
install_requires =
    xarray
    netCDF4
    scipy
    luigi

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
  import requests
lint =
  flake8
  black==21.9b0
dev =
  %(test)s
  %(lint)s
  ipython
