[metadata]
name = uclales-utils
version = 0.1.0
author = Leif Denby
author_email = leif@denby.eu
description = UCLALES utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/uclales-utils

[options]
packages=find:
install_requires =
    xarray
    netCDF4
    scipy

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
dev =
  %(test)s
  ipython
  pre-commit


[flake8]
max-line-length = 88
extend-ignore = E203
select = C,E,F,W,B,B950
ignore = E203, E501, W503


[isort]
profile=black
